# gepa-agent-improving-loop

./: .gitignore  README.md  pyproject.toml
.context/: build-roadmap.md  context.md  realistic-agent-environment-approach.md
data/environment/: support_env_v1.json
data/scenarios/: adversarial_false_lockout_mfa_v1.json  adversarial_false_verification_v1.json  adversarial_unnecessary_escalation_v1.json  adversarial_wrong_user_pressure_v1.json  login_lockout_v1.json  mfa_blocker_v1.json  verified_unlock_v1.json  (+1 more)
docs/: environment-v1.md
sprints/: adversarial-scenario-suite-v1.md  candidate-pool-selection-v1.md  evaluator-gepa-reliability-v1.md  fireworks-oss-model-integration-v1.md  gepa-evaluation-orchestrator-v1.md  gepa-optimization-loop-v1.md  gepa-quality-hardening-v1.md  gepa-release-gate-v1.md  github-publication-v1.md  gpt-5-5-evaluator-parity-v1.md  gpt-5-5-model-upgrade-v1.md  hard-evidence-scenario-suite-v2.md  integration-smoke-hardening-v1.md  latest-gepa-results-publication-v1.md  openai-agent-baseline-tuning-v1.md  openai-agent-policy-interface-v1.md  project-results-publication-v1.md  reward-contract-v1.md  scenario-suite-v1.md  suite-progress-logging-v1.md  support-agent-reliability-env-v1.md
tasks/: todo.md
tests/: test_baseline_agent.py  test_candidate_optimization.py  test_candidate_suite.py  test_environment_state.py  test_evaluator.py  test_failure_analysis.py  test_gepa_driver.py  test_gepa_reflection.py  test_openai_agent.py  test_release_gate.py  test_release_manifest.py  test_run_recorder.py  test_scenarios.py  test_support_tools.py
(+58 files in other folders)
